[package]
name = "chiron"
version = "0.1.0"
authors = ["safinsingh <safinsingh.dev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libchiron"

[dependencies]
anyhow = "1.0.35"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.7"
typetag = "0.1.7"

[target.'cfg(unix)'.dependencies]
procfs = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["debugapi"] }
