[package]
name = "chiron"
version = "0.1.0"
authors = ["safinsingh <safinsingh.dev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libchiron"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
const_format = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
typetag = "0.1"

[target.'cfg(unix)'.dependencies]
procfs = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debugapi"] }

[target.'cfg(unix)'.build-dependencies]
cc = "1"
bindgen = "0.58"
